# avataa-events

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: database.py  main.py  models.py
app/common/: constants.py  exceptions.py
app/config/: app_config.py  database_config.py  documentation_config.py  elastic_config.py  kafka_config.py  security_config.py
app/migrations/: env.py
app/migrations/versions/: 11_04_2025__15_39___added_session_id_for_user.py  15_05_2025__14_03___make_user_id_in_events_nullable.py  27_02_2025__12_41___create_event_tables.py  3_03_2025__15_31___updated_model_of_valid_to.py
app/routers/event_router/: exceptions.py  processors.py  router.py  schemas.py
app/services/converter_service/: processor.py  schemas.py
app/services/elastic_service/: elastic_client.py
app/services/event_processor/inventory_processor/: constants.py  exceptions.py  processor.py  utils.py
app/services/grpc_service/: getter_example.py  grpc_server.py
app/services/kafka_service/: kafka_connection_utils.py
app/services/kafka_service/inventory_changes_processor/: processor.py  schemas.py
app/services/security_service/: security_factory.py
app/services/security_service/data/: permission.py
app/services/security_service/data/permissions/: inventory.py  permission_template.py
app/services/security_service/implementation/: keycloak.py
app/services/security_service/routers/models/: request_models.py  response_models.py
app/services/security_service/routers/utils/: adder.py  (+2 more)
app/services/security_service/utils/: get_user_data.py
(+7 files in other folders)
